Fix z-index issues between contextual menu and tabs

--- a/scss/_patterns_contextual-menu.scss
+++ b/scss/_patterns_contextual-menu.scss
@@ -24,7 +24,7 @@
     position: absolute;
     right: 0;
     width: fit-content;
-    z-index: 1;
+    z-index: 10;
 
     // When set to false will show the contextual menu
     &[aria-hidden='false'] {
